--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -14,7 +14,7 @@ on:
           - staging
           - production
           - staging and production
-        default: staging
+        default: production
   push:
     branches:
       - master
