--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -22,7 +22,7 @@ on:
           - staging
           - production
           - staging and production
-        default: staging
+        default: production
 
 # this ensures that only one CI pipeline with the same key
 #  can run at once in order to prevent undefined states
