--- a/infra/cf-github-oidc.yaml
+++ b/infra/cf-github-oidc.yaml
@@ -44,6 +44,7 @@ Resources:
                   - iam:TagPolicy
                   - iam:TagRole
                   - iam:TagServerCertificate
+                  - iam:PutRolePolicy
                   - kms:*
                   - s3:*
                   - states:*
